# hg-chatbot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.pro.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/alembic/: env.py
app/api/: endpoints.py
app/api/config/: __init__.py  config.py  prompts.yaml  settings.py
app/api/routers/: __init__.py  auth.py  files.py  traces.py
app/api/schema/: __init__.py  agent.py  base.py  chat.py  file.py  logs.py  master_data.py  sessions.py  user_info.py
app/api/security/: __init__.py
app/core/base/: schema.py
app/core/config/: __init__.py  base.yaml  logging_config.py  settings.py
app/core/discord/: __init__.py  bot.py
app/core/embeddings/: openai.py
app/core/llms/: __init__.py  googlegenai.py  openai.py  xai.py
app/core/loaders/: __init__.py  docx_loader.py  excel_loader.py  md_loader.py  pdf_loader.py
app/core/mcp/: cmt_ytb.py  schema.py  tools.py  vid_ytb.py  video_youtube.py
app/core/parsers/: __init__.py  tokenize.py
app/core/rerank/: __init__.py  base.py  msmarco.py
app/services/: __init__.py
docker/: docker-compose.hg-chatbot.yml  docker-compose.mongodb.yml  docker-compose.qdrant.yml  requirements.txt
k8s/: 00-namespace.yaml
k8s/01-storage/: nfs-db-pv.yaml  nfs-pv.yaml  nfs-pvc.yaml  storage-class.yaml
k8s/02-config/: configmap.yaml  secrets.yaml.example
k8s/03-databases/: mongodb.yaml  postgres.yaml  qdrant.yaml
k8s/04-apps/: chatbot-hpa.yaml  chatbot-service.yaml  chatbot.yaml  crawl-comment.yaml  hg-chatbot-deployment.yaml
rerank_services/: Dockerfile  main.py  requirements.txt
scripts/: 00-check-prerequisites.sh  01-setup-nfs.sh  02-build-push.sh  03-deploy-all.sh
src/hg_chatbot/: main.py
(+124 files in other folders)
