[project]
name = "hg_chatbot"
version = "0.1.0"
description = "hg-chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
hg_chatbot = "hg_chatbot.main:run"
run_crew = "hg_chatbot.main:run"
train = "hg_chatbot.main:train"
replay = "hg_chatbot.main:replay"
test = "hg_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
